--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="assets/funds.png" alt="Investment Logo" />
+    <img src="assets/funds.png" alt="A money bag" />
     <div>
       <h1>Investment Calculator</h1>
     </div>
